--- a/HelloWorld.csproj
+++ b/HelloWorld.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="microsoft.data.sqlclient" Version="5.1.1" />
+    <PackageReference Include="microsoft.entityframeworkcore" Version="7.0.5" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
